Fix content jumping on hover

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -73,9 +73,21 @@ button, .list-group, ol.breadcrumb, input {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);;
 }
 
+.editable-test {
+  border: 2px solid transparent;
+}
+
 .editable-test:hover {
   background-color: var(--bs-gray-200);
   border-radius: 5px;
+}
+
+.editable-test-focused {
+  background-color: var(--bs-gray-200);
+  border-radius: 5px;
+  border: 2px solid var(--bs-primary);
+  box-sizing: border-box;
+
 }
 
 code, kbd, pre, samp {
